@@ -82,13 +82,17 @@ package.
 
    Register an event called *name*.  This is needed to be able to emit it.
 
-.. method:: Sphinx.add_translator(name, translator_class)
+.. method:: Sphinx.set_translator(name, translator_class)
                
-   Register a Docutils translator class.  This is used to register a
-   custom output translator.  This allows extensions to define custom
-   nodes for the translator (see :meth:`add_node`).  If the name
-   clashes with an existing translator an
-   :exc:`sphinx.errors.ExtensionError` will be raised.
+   Register or override a Docutils translator class. This is used to register
+   a custom output translator or to replace a builtin translator.
+   This allows extensions to use custom translator and define custom
+   nodes for the translator (see :meth:`add_node`).
+
+   This is a API version of :confval:`html_translator_class` for all other
+   builders. Note that if :confval:`html_translator_class` is specified and
+   this API is called for html related builders, API overriding takes
+   precedence.
 
    .. versionadded:: 1.3
 
