@@ -1,0 +1,3 @@
+=======================
+Test API set_translator
+=======================
