@@ -43,6 +43,8 @@ Features added
 * PR#255: When generating latex references, also insert latex target/anchor
   for the ids defined on the node. Thanks to Olivier Heurtier.
 * PR#229: Allow registration of other translators. Thanks to Russell Sim.
+* Add app.set_translator() API to register or override a Docutils translator
+  class like :confval:`html_translator_class`.
 
 Bugs fixed
 ----------
